# verstka

./: README.md  pyproject.toml  web.py
verstka_web/: Catalog.html  Category.html  Contact.html  main.html
