[tool.poetry]
name = "verstka"
version = "0.1.0"
description = ""
authors = ["Ilya <ilya.piltyay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.16.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
/(
    .git
    |__pycache__
    |.venv
    |env
    |build
    |dist
)/
'''

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.isort]
line_length = 119